<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="Seleziona o scatta una foto"
        android:backgroundTint="@color/colorAccent"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="242dp"
        android:layout_height="228dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:scaleType="fitXY"
        android:src="@mipmap/strada" />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="366dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:onClick="upload"
        android:backgroundTint="@color/colorAccent"
        android:text="Segnala dissesto"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:onClick="button_aggiornaPosix"
            android:text="Aggiorna posizione" />

        <Button
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:onClick="map"
            android:text="Mappa"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>